# posrat

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: docker-build.yml
examples/: sample-exam.json
posrat/: __init__.py  __main__.py  app.py
posrat/designer/: __init__.py  browser.py  editor.py  explorer.py  import_dialog.py  layout.py  properties.py  state.py
posrat/importers/: __init__.py  base.py  certexam_pdf.py  conversion.py  examtopics.py  html_questions.py  rtf_questions.py  rtf_utils.py
posrat/io/: __init__.py  (+2 more)
tests/: __init__.py  test_acl_repo.py  test_app_smoke.py  test_cli.py  test_designer_browser.py  test_exam_model.py  test_exam_repo.py  test_import_dialog.py  test_importers_base.py  test_importers_certexam_pdf.py  test_importers_conversion.py  test_importers_examtopics.py  test_importers_html_questions.py  test_importers_rtf_questions.py  test_importers_rtf_utils.py  test_json_export.py  test_json_import.py  test_json_roundtrip.py  test_migrations.py  test_open_db.py  test_question_model.py  test_question_repo.py  test_runner_countdown.py  test_runner_grading.py  test_runner_history.py  test_runner_identity.py  test_runner_mode_selection.py  test_runner_orchestrator.py  test_runner_picker.py  test_runner_sampler.py  test_runner_session_detail.py  test_runner_session_state.py  test_sample_exam.py  test_session_models.py  test_session_repo.py  test_system_auth.py  test_system_auth_service.py  test_system_auth_session.py  test_system_bootstrap.py  test_system_db.py  (+2 more)
(+51 files in other folders)
